Update ShopManager.java
-Fixed a bug where the list inside inside manager would be overriden with unmidifiable one and create further problems